--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   build_runner: ^2.3.3
   freezed_annotation: ^2.2.0
   json_serializable: ^6.6.0
+  desktop_window: ^0.4.0
+  shared_preferences: ^2.0.15
+  flutter_bloc: ^8.1.1
+  conduit: ^4.1.6
 
 
 dev_dependencies:
